[package]
name = "ui_core"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
# FR-06: OTL worker + optional OTL smoke in blueprint editor after compile (`blueprint_editor_plugin/marketlab`).
marketlab = ["engine_backend/marketlab", "blueprint_editor_plugin/marketlab"]

[dependencies]
# UI framework
gpui-ce.workspace = true
ui.workspace = true

# UI crates (all of them!)
ui_common.workspace = true
ui_level_editor.workspace = true
ui_entry.workspace = true
ui_multiplayer.workspace = true
ui_problems.workspace = true
ui_flamegraph.workspace = true
ui_type_debugger.workspace = true
ui_file_manager.workspace = true
ui_plugin_manager.workspace = true
ui_log_viewer.workspace = true
ui_settings.workspace = true
ui_git_manager = { path = "../ui_git_manager" }
ui_about.workspace = true
ui_documentation.workspace = true


# Engine
engine_state.workspace = true
engine_backend.workspace = true
window_manager.workspace = true

# Plugin system
plugin_manager = { path = "../../crates/plugin_manager" }
plugin_editor_api = { path = "../../crates/plugin_editor_api" }

# Built-in plugins — sibling `Plugin_Blueprints` submodule (Market Lab layout); see root README / third_party/README.
blueprint_editor_plugin = { path = "../../../Plugin_Blueprints" }
serde = { version = "1.0", features = ["derive"] }
schemars = "1.0"
tracing.workspace = true
smol = "2"
futures = "0.3"
rust-i18n.workspace = true
serde_json = "1.0"
